Fix pro-landing sticky bar z-index bug

--- a/assets/scss/pages/pro/_index.scss
+++ b/assets/scss/pages/pro/_index.scss
@@ -107,7 +107,7 @@
   .pro-nav--upper {
     position: sticky;
     top: 0;
-    z-index: 120;
+    z-index: 20;
 
     .container {
       padding-bottom: 1em;
